# Dot-Product-Visualization

./: CMakeLists.txt  README.md
src/: calc.cpp  calc.h  main.cpp  vec2.h
